fix Main z-index

--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -5,4 +5,5 @@
     right: 0;
     bottom: 0;
     overflow-y: auto;
+    z-index: -1;
 }
